--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_keyboard_visibility: ^5.4.0
   google_fonts: ^3.0.1
   local_auth: ^2.1.2
+  sqflite: ^2.2.6
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
