--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   local_auth: ^2.1.2
   sqflite: ^2.2.6
   path: ^1.8.3
+  firebase_messaging: ^14.6.0
+  flutter_local_notifications: ^14.1.1
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
