--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,7 +3,7 @@ workflows:
     name: Android APK Build
     max_build_duration: 60
     environment:
-      flutter: stable
+      flutter: 3.38.9
       java: 17
     triggering:
       events:
