--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,13 @@
 plugins {
     id "com.android.application" version "7.3.0" apply false
     id "com.android.library" version "7.3.0" apply false
-    id "org.jetbrains.kotlin.android" version "1.7.10" apply false
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
 
 rootProject.buildDir = '../build'
@@ -13,5 +19,5 @@ subprojects {
 }
 
 tasks.register("clean", Delete) {
-    delete rootProject.layout.buildDirectory
+    delete rootProject.buildDir
 }
