--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,9 +4,9 @@ workflows:
     instance_type: mac_mini_m2
     max_build_duration: 120
     environment:
-      flutter: stable
+      flutter: 3.38.9
       xcode: latest
-      java: temurin17
+      java: temurin11
     triggering:
       events:
         - push
